# SafeTune

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  robots.txt  setup.py  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  faithfulness_report.md  feature_request.md
assets/: safetune.css  safetune.js
community/changelog/: index.html
community/contributing/: index.html
community/dev-runbook/: index.html
community/faq/: index.html
community/scope/: index.html
docs/: index.md  llms.txt
docs/community/: changelog.md  contributing.md  dev-runbook.md  faq.md  scope.md
docs/examples/: index.md  notebooks.md  scripts.md  single-direction-jailbreak.md
docs/getting-started/: how-to-read-these-docs.md  index.md  installation.md  quickstart.md  taxonomy.md
docs/reference/: LIBRARY_CHECKLIST.csv  api-contract.md  cli.md  feature-map.md  index.md  references.md  system-design.md
docs/reference/api/: config.md  evaluate.md  harden.md  index.md  interpret.md  recover.md  steer.md  unlearn.md
docs/user-guide/: audit-your-model.md  evaluate.md  harden.md  index.md  interpret.md  recover.md  steer.md  unlearn.md  usage.md
docs/user-guide/harden/: constrained-sft.md  data-selection.md  data-shaping.md  gradient-surgery.md  pre-ft.md  regularization.md  representation.md  tamper-resistant.md
docs/user-guide/unlearn/: flat.md  gradient-ascent.md  npo.md  rmu.md  simdpo.md
examples/: README.md  index.html
examples/case_studies/: single_direction_jailbreak.py
examples/demos/: abliteration_and_defense.py  compare_recover.py  eval_model.py  evaluate_demo.py  full_pipeline.py  interpret_demo.py  run_safety_neuron_inference.py  safety_config_quickstart.py
examples/notebooks/: evaluate_demo.ipynb  full_pipeline.ipynb  harden_demo.ipynb  index.html  interpret_demo.ipynb  recover_comparison.ipynb  recover_demo.ipynb  safety_monitoring.ipynb  steer_comparison.ipynb  steer_demo.ipynb  unlearn_demo.ipynb
examples/quickstart/: evaluate_quickstart.py  harden_quickstart.py  interpret_quickstart.py  quickstart.py  recover_quickstart.py  unlearn_quickstart.py
examples/runner/: harden.py  recover.py  steer.py  unlearn.py
examples/scripts/: index.html
examples/single-direction-jailbreak/: index.html
getting-started/: index.html
getting-started/how-to-read-these-docs/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/taxonomy/: index.html
overrides/: main.html
reference/: index.html
reference/api/: index.html
reference/api-contract/: index.html
reference/api/config/: index.html
reference/api/evaluate/: index.html
reference/api/harden/: index.html
reference/api/interpret/: index.html
reference/api/recover/: index.html
reference/api/steer/: index.html
reference/api/unlearn/: index.html
reference/cli/: index.html
reference/feature-map/: index.html
reference/references/: index.html
reference/system-design/: index.html
scripts/: generate_pareto_plot.py  plot_matrix_pareto.py  rejudge_with_hfjudge.py  sweep_cb_rr_threshold.py  validate_matrix.py  validate_refusal_direction.py
search/: search_index.json
src/safetune/: __init__.py  __main__.py  _refusal_helpers.py  cli.py  config.py
src/safetune/core/: __init__.py  artifacts.py  door.py  hf_integration.py  neuron_ft.py  neuron_safety.py  pke.py  safereact.py  safety_config.py  safety_lora.py  sap.py
src/safetune/data/: README.md  __init__.py  manager.py  processors.py  schemas.py
src/safetune/instrumentation/: __init__.py
src/safetune/interventions/: __init__.py
src/safetune/rewards/: __init__.py  base.py  code.py  factory.py  math.py  nlp.py  registry.py  safety.py  specialized.py  text.py  training.py
src/safetune/runner/: __init__.py  _registry.py  smoke_test.py
tests/: conftest.py
tests/diagnostic/: test_asrt.py  test_caa.py  test_circuit_breaker.py  test_cosa.py  test_fix_runner_model_id.py  test_harden_audit.py  test_harden_behavioral.py  test_harden_instantiation.py  test_interpret_pillar.py  test_new_methods.py  test_pipeline_backends.py  test_real_model_smoke.py  test_recover_ctheta.py  test_recover_state_dict_mutation.py  test_refusal_direction.py  test_repbend.py  test_round3_methods.py  test_round4_methods.py  test_round5_methods.py  test_rrfa.py  test_spectral_monitor.py  test_tar.py  test_validation_matrix.py  test_vector_extraction.py  test_vllm_lens_backend.py
tests/integration/: conftest.py  test_harden.py  test_integration.py  test_proxy.py  test_recover.py  test_steer.py  test_unlearn.py
tests/runtime/: __init__.py  test_all_methods_construct.py  test_batch2_safety_modules.py  test_cli_fixes.py  test_cuda_recheck_fixes.py  test_decoding_params.py  test_inference.py  test_new_safety_modules.py  test_runner_harden.py  test_runner_recover.py  test_runner_steer.py  test_runner_unlearn.py  test_safety_neuron_inference.py  test_train_unlearn_fixes.py
tests/safety/: test_aaq_patch.py  test_alert.py  test_artifacts.py  test_circuit_kit.py  test_conversation_guard.py  test_data_compiler.py  test_door.py  test_eval_metrics.py  test_fix_harden.py  test_fix_optim.py  test_fix_recover.py  test_fix_unlearn.py  test_guardrails.py  test_harmfulness_classifier.py  test_middleware_classifier.py  test_multi_turn.py  test_optim_wrappers.py  test_owasp.py  test_patches_pytorch.py  test_qresafe_patch.py  test_runtime_safety.py  test_safereact.py  test_safety_lora.py  test_safety_patches.py  test_safety_reward.py  test_safety_score.py  test_unified_config.py
tests/support/: validate_matrix.py
user-guide/: index.html
user-guide/audit-your-model/: index.html
user-guide/evaluate/: index.html
user-guide/harden/: index.html
user-guide/interpret/: index.html
user-guide/recover/: index.html
user-guide/steer/: index.html
user-guide/unlearn/: index.html
user-guide/usage/: index.html
(+450 files in other folders)
